Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60696

Regression: Distance field glyph cache isn't shared between sizes

    XMLWordPrintable

Details

    • Bug
    • Status: Closed
    • P1: Critical
    • Resolution: Done
    • 5.8.0, 5.10
    • 5.9.0 RC
    • Quick: SceneGraph
    • None
    • Linux, QNX
    • 9921b48c83490b450241d6c172f1375ab4efb6b1

    Description

      The following example creates separate distance field textures for each Text element:

      import QtQuick 2.0
      
      Item {
          width: 400
          height: 400
      
          Text {
              font.pixelSize: 24
              text: "My Sample Text"
          }
      
          Text {
              font.pixelSize: 25
              text: "My Sample Text"
          }
      }
      

      Output is:

      qt.scenegraph.time.glyph: distancefield: 11 glyphs prepared in 1ms, rendering=0, upload=1
      qt.scenegraph.time.glyph: distancefield: 11 glyphs prepared in 0ms, rendering=0, upload=0
      

      This appears to be due to changes to the cache key between 5.6 and 5.8 – using QRawFont directly rather than a custom QString key.

      Attachments

        For Gerrit Dashboard: QTBUG-60696
        # Subject Branch Project Status CR V

        Activity

          People

            mbrasser Michael Brasser
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes