src/quick/scenegraph/qsgdefaultrendercontext.cpp
@@ -271,6 +271,26 @@ void QSGDefaultRenderContext::compileShader(QSGMaterialShader *shader, QSGMateri
     }
 }
 
+QString QSGDefaultRenderContext::fontKey(const QRawFont &font)
+{
+    QFontEngine *fe = QRawFontPrivate::get(font)->fontEngine;
+    if (!fe->faceId().filename.isEmpty()) {
+        QByteArray keyName = fe->faceId().filename;
+        if (font.style() != QFont::StyleNormal)
+            keyName += QByteArray(" I");
+        if (font.weight() != QFont::Normal)
+            keyName += ' ' + QByteArray::number(font.weight());
+        keyName += QByteArray(" DF");
+        return QString::fromUtf8(keyName);
+    } else {
+        return QString::fromLatin1("%1_%2_%3_%4")
+            .arg(font.familyName())
+            .arg(font.styleName())
+            .arg(font.weight())
+            .arg(font.style());
+    }
+}
+
 void QSGDefaultRenderContext::initializeShader(QSGMaterialShader *shader)
 {
     shader->program()->bind();
@@ -293,10 +313,11 @@ QT_END_NAMESPACE
 
 QSGDistanceFieldGlyphCache *QSGDefaultRenderContext::distanceFieldGlyphCache(const QRawFont &font)
 {
-    QSGDistanceFieldGlyphCache *cache = m_glyphCaches.value(font, 0);
+    QString key = fontKey(font);
+    QSGDistanceFieldGlyphCache *cache = m_glyphCaches.value(key, 0);
     if (!cache) {
         cache = new QSGDefaultDistanceFieldGlyphCache(openglContext(), font);
-        m_glyphCaches.insert(font, cache);
+        m_glyphCaches.insert(key, cache);
     }
 
     return cache;
