src/quick/scenegraph/util/qsgdistancefieldutil_p.h
@@ -80,7 +80,9 @@ public:
     void setAntialiasingSpreadFunc(AntialiasingSpreadFunc func) { m_antialiasingSpread_func = func; }
 
 private:
-    QHash<QRawFont, QSGDistanceFieldGlyphCache *> m_caches;
+    static QString fontKey(const QRawFont &font);
+
+    QHash<QString, QSGDistanceFieldGlyphCache *> m_caches;
 
     ThresholdFunc m_threshold_func;
     AntialiasingSpreadFunc m_antialiasingSpread_func;
